--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,14 +22,14 @@ jobs:
         args: -O api/players.xml https://s166-en.ogame.gameforge.com/api/players.xml
 
     - name: wget
-        uses: wei/wget@v1
-        with:
-          args: -O api/planets.xml https://s166-en.ogame.gameforge.com/api/planets.xml
+      uses: wei/wget@v1
+      with:
+        args: -O api/planets.xml https://s166-en.ogame.gameforge.com/api/planets.xml
         
     - name: Deploy
       uses: crazy-max/ghaction-github-pages@v1
       with:
         target_branch: gh-pages
-        build_dir: public
+        build_dir: /
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
