--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
     - name: wget
       uses: wei/wget@v1
       with:
-        args: -O api/planets.xml https://s166-en.ogame.gameforge.com/api/planets.xml
+        args: -O api/universe.xml https://s166-en.ogame.gameforge.com/api/universe.xml
         
     - name: Deploy
       uses: crazy-max/ghaction-github-pages@v1
